Switch to Mockito Kotlin